// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailValidation Button matches snapshot 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text"
  disabled={false}
  id="proceed"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  />
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`EmailValidation renders email verification correctly 1`] = `
<div
  className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
  style={
    Object {
      "backgroundColor": "white",
      "height": 280,
      "marginLeft": 530,
      "marginTop": 100,
      "paddingLeft": 40,
      "paddingRight": 40,
      "paddingTop": 30,
      "width": 500,
    }
  }
>
  <div
    className="MuiCardContent-root"
    style={
      Object {
        "padding": 20,
      }
    }
  >
    <h2
      className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom MuiTypography-alignCenter"
    >
      Email Verification
    </h2>
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
      paddingTop="30"
    >
      A email with you account confirmation link has been sent to your email: 
      <a
        href=""
      />
      . Check your email and come back to proceed.
    </p>
  </div>
  <div
    className="MuiCardActions-root MuiCardActions-spacing"
    style={
      Object {
        "paddingLeft": 165,
        "paddingTop": 30,
      }
    }
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "#dc3545",
          "color": "#FFFFFF",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Proceed
      </span>
    </button>
  </div>
</div>
`;
